Navigation drawer customized

--- a/home.scss
+++ b/home.scss
@@ -2,9 +2,29 @@
 @import "@material/drawer/mdc-drawer";
 @import "@material/list/mdc-list";
 @import "@material/image-list/mdc-image-list";
+@import "@material/ripple/mixins";
 
 .home {
   display: flex; // Flexbox is used to easily arrange the persistent drawer and content side-by-side
+}
+
+.shrine-drawer {
+  @include mdc-drawer-fill-color-accessible(primary);
+  @include mdc-drawer-z-index(0);
+  text-transform: uppercase;
+
+  .mdc-list {
+    margin: 70px 5px auto 5px;
+  }
+
+  .mdc-list-item {
+    border-radius: 6px;
+    justify-content: center;
+  }
+
+  .mdc-list .mdc-list-item {
+    @include mdc-states-activated(#fff);
+  }
 }
 
 .shrine-logo-drawer {
