--- a/login.scss
+++ b/login.scss
@@ -2,6 +2,11 @@
 @import "@material/textfield/mdc-text-field";
 @import "@material/button/mdc-button";
 
+.shrine-login {
+  background-color: $mdc-theme-background;
+  color: $mdc-theme-on-background;
+}
+
 .header {
   text-align: center;
 }
@@ -18,6 +23,14 @@
   display: block;
   width: 300px;
   margin: 20px auto;
+
+  &:not(.mdc-text-field--invalid) {
+    @include mdc-text-field-label-color(on-primary);
+  }
+
+  &.mdc-text-field--focused:not(.mdc-text-field--invalid) {
+    @include mdc-text-field-label-color(on-primary);
+  }
 }
 
 .button-container {
@@ -29,4 +42,8 @@
   & button {
     margin: 3px;
   }
+}
+
+.cancel {
+  @include mdc-button-ink-color(on-primary);
 }
