--- a/home.scss
+++ b/home.scss
@@ -3,6 +3,7 @@
 @import "@material/list/mdc-list";
 @import "@material/image-list/mdc-image-list";
 @import "@material/ripple/mixins";
+@import "@material/typography/mdc-typography";
 
 .home {
   display: flex; // Flexbox is used to easily arrange the persistent drawer and content side-by-side
@@ -36,6 +37,7 @@
 }
 
 .shrine-title {
+  @include mdc-typography(headline6);
   text-align: center;
   margin: 5px auto;
 }
@@ -43,4 +45,28 @@
 .product-list {
   @include mdc-image-list-standard-columns(4);
   overflow: auto;
+
+  .mdc-image-list__supporting {
+    justify-content: center;
+  }
+
+  .mdc-image-list__item {
+    padding: 10px;
+  }
+
+  .mdc-image-list__label {
+    @include mdc-typography(subtitle2);
+  }
+}
+.shrine-select-item-divider {
+  display: block;
+  border-bottom-color: #eaa4a4;
+  border-bottom-width: 2px;
+  width: 50px;
+  position: relative;
+  top: -8px;
+}
+
+.shrine-drawer .shrine-select-item-divider {
+  margin: 0 auto;
 }
