--- a/home.scss
+++ b/home.scss
@@ -4,6 +4,7 @@
 @import "@material/image-list/mdc-image-list";
 @import "@material/ripple/mixins";
 @import "@material/typography/mdc-typography";
+@import "@material/elevation/mdc-elevation";
 
 .home {
   display: flex; // Flexbox is used to easily arrange the persistent drawer and content side-by-side
@@ -40,6 +41,14 @@
   @include mdc-typography(headline6);
   text-align: center;
   margin: 5px auto;
+}
+
+.shrine-body {
+  @include mdc-elevation(4);
+
+  display: block;
+  overflow: auto;
+  z-index: 0;
 }
 
 .product-list {
